# doxx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.html  README.md  RELEASE.md  clippy.toml  deny.toml  flake.nix  minimal_output.txt  rustfmt.toml  test_documents.sh  test_image_display.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  homebrew.yml  release.yml  security.yml
Formula/: doxx.rb
assets/: cassette.tape
scripts/: release.sh
src/: ai.rs  document.rs  export.rs  image_extractor.rs  lib.rs  main.rs  terminal_image.rs  ui.rs
tests/: integration_test.rs  reproduce_unicode_panic.rs  test_image_extraction.rs  unicode_safety.rs
tests/fixtures/: README.md  advanced-numbering.docx  color-showcase.docx  example.docx  export-test.docx  formatting-showcase.docx  headings-hierarchy.docx  images.docx  lists-comprehensive.docx  minimal.docx  numbered-headings.docx  retro-gaming-guide.docx  sample.docx  simple-numbering.docx  tables-heavy.docx  unicode-special.docx  unicode_panic_test.docx  unicode_test.rs  ~$sts-comprehensive.docx  ~$vanced-numbering-2.docx
