[package]
name = "doxx"
version = "0.1.0"
edition = "2021"
description = "Terminal document viewer for .docx files"
license = "MIT"
repository = "https://github.com/bgreenwell/doxx"
keywords = ["docx", "terminal", "document", "viewer", "tui"]
categories = ["command-line-utilities", "text-processing"]
default-run = "doxx"
exclude = [
    "CLAUDE.md",
    "assets/",
    "src/bin/generate_test_docs.rs",
    "tests/fixtures/README.md",
    ".DS_Store",
    "*.tmp",
    "*.log",
    "*.bak",
    "*~"
]

[lib]
name = "doxx"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Document parsing
docx-rs = "0.4"

# Terminal UI
ratatui = "0.29"
crossterm = "0.27"
arboard = "3.3"

# Image support
viuer = "0.7"
image = "0.25"
zip = "2.0"
ratatui-image = "1.0"

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }

# Text processing
unicode-segmentation = "1.10"
regex = "1.10"
once_cell = "1.19"

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dirs = "5.0"
toml = "0.8"

# Release optimizations
[profile.release]
codegen-units = 1
lto = true
